# syslog-ng

./: .travis.yml  CMakeLists.txt  configure.ac  syslog-ng.conf
dbld/: build.manifest  functions.sh  packages.manifest  rules  tarball-changes.ignore
dbld/images/: debian-sid.prepare.sh  devshell.dockerfile
dbld/images/helpers/: dependencies.sh  packages.manifest
dbld/images/hooks/: build
lib/: CMakeLists.txt  Makefile.am  cfg-block-generator.c  cfg-grammar.y  cfg-lexer.c  cfg-tree.c  cfg-tree.h  logmpx.c  logpipe.h  logreader.c  logsource.c  logthrdestdrv.c  plugin.c
lib/compat/: openssl_support.c
lib/debugger/: debugger.c
lib/filter/: filter-expr-grammar.ym  filter-re.c
lib/parser/: parser-expr-grammar.ym  parser-expr.c  parser-expr.h
lib/rewrite/: rewrite-expr-grammar.ym  rewrite-subst.c
lib/scanner/xml-scanner/: xml-scanner.c  xml-scanner.h
lib/template/: Makefile.am  eval.c  eval.h  function.h  simple-function.c  simple-function.h  templates.c  templates.h  user-function.c
modules/afamqp/: afamqp.c
modules/afsocket/: afsocket-grammar.ym
modules/afsql/: afsql.c
modules/basicfuncs/: cond-funcs.c  misc-funcs.c  tf-template.c
modules/confgen/: Makefile.am  confgen-grammar.ym  confgen-parser.c  confgen-parser.h  confgen-plugin.c  confgen.c  confgen.h
modules/http/: CMakeLists.txt  Makefile.am  http-grammar.ym  http-loadbalancer.c  http-loadbalancer.h  http-parser.c  http-worker.c  http-worker.h  http.c  http.h
modules/http/tests/: CMakeLists.txt  Makefile.am  test_http-loadbalancer.c
modules/json/: format-json.c
modules/python/: python-confgen.c  python-dest.c  python-plugin.c
modules/xml/: xml-grammar.ym  xml-parser.c  xml.c  xml.h
modules/xml/tests/: test_xml_parser.c
packaging/debian/: rules  syslog-ng-core.install
scl/cisco/: plugin.conf
tests/copyright/: policy
